# software-construction-labs

./: .gitignore
lab1/: main.py
lab10/: LICENSE  README.md  pyproject.toml
lab10/src/pnu_2024_kpz_lab10_stepan_nazar/: main.py
lab10/tests/: test_doctests.py  test_main.py
lab11/: client.py  communication.py  server.py
lab12/: server.py
lab12/templates/: index.html  info.html
lab13/: server.py
lab13/templates/: base.html  info.html
lab14/: main.py
lab2/: main.py
lab3/: main.py
lab4/: main.py  string_utils.py  test.py
lab5/: main.py  pytest.ini  requirements.txt  test_main.py
lab6/: main.py
lab7/: main.py  test.py
lab8/: descriptors.py  employee.py  main.py
lab9/: controllers.py  main.py  models.py  requirements.txt  test_controllers.py  test_models.py  test_views.py  view.py
