[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pnu_2024_kpz_lab10_stepan_nazar"
version = "0.0.2"
authors = [
  { name="Stepan Nazar", email="stepan.nazar.23@pnu.edu.ua" },
]
description = "A laboratory work for subject Software Construction"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatchling]
source-dir = "src"